--- a/estilos.css
+++ b/estilos.css
@@ -84,7 +84,7 @@ header label:hover{
     width: 100%;
 }
 .grid-container{
-    height: 100%;
+    height: 60%;
     width: 100%;
     display: grid;
     grid-template-columns:repeat(3, 1fr);
@@ -146,6 +146,7 @@ header label:hover{
 }
 @media screen and (max-width:768px){
   body{
+    background-color: rgb(0,0,0,0.4);
     width: 100%
   }
     header label{
@@ -170,6 +171,11 @@ header label:hover{
     .grid-container{
       grid-template-columns:repeat(2, 1fr);
       width: 100%;
+      background-color: black;
+    }
+    .imgcatalogo{
+      width: 100%;
+      border-style: solid;
     }
     .textoinicio {
       margin: 20px;
@@ -185,5 +191,13 @@ header label:hover{
     .logotip{
       float: center;
       width: 20%;
+    }
+    .redes{
+      background-color: rgb(0,0,0,0.3);
+      text-decoration: none;
+    }
+
+    footer{
+      background-color: black;
     }
 }
