--- a/estilos.css
+++ b/estilos.css
@@ -125,6 +125,11 @@ header label:hover{
     width: 30px;
 
 }
+.redes{
+  background-color: rgb(0,0,0,0.6);
+    border-style: solid;
+    text-decoration: none;
+}
 .redes h2{
     margin: 20px;
     text-align: center;
@@ -132,17 +137,22 @@ header label:hover{
     font-size: 20px;
 }
 .redes ul{
+    text-decoration: none;
     text-align: center;
     margin: 10px;
 }
 .redes li{
-
     display: inline-block;
     text-decoration: none;
+
 }
 #carousel1{
-    float: right;
+    float: center;
     width: 100%;
+    height: 100%;
+}
+.mapa{
+  display: none;
 }
 @media screen and (max-width:768px){
   body{
@@ -201,5 +211,13 @@ header label:hover{
     footer{
       background-color: black;
       margin: 10px;
+    }
+    #carousel1 div{
+      display: none;
+    }
+    .mapa{
+      display: inline;
+      width: 100%;
+      height: 100%;
     }
 }
