--- a/estilos.css
+++ b/estilos.css
@@ -121,15 +121,6 @@ header label:hover{
     text-align: left;
     font-family: monospace;
 }
-.redes img{
-    width: 30px;
-
-}
-.redes{
-  background-color: rgb(0,0,0,0.6);
-    border-style: solid;
-    text-decoration: none;
-}
 .redes h2{
     margin: 20px;
     text-align: center;
@@ -137,15 +128,21 @@ header label:hover{
     font-size: 20px;
 }
 .redes ul{
-    text-decoration: none;
-    text-align: center;
-    margin: 10px;
+  background-color: rgb(0,0,0,0.6);
+  text-align: center;
+  padding: 20px;
+  margin: 10px;
 }
-.redes li{
-    display: inline-block;
-    text-decoration: none;
 
+.redes li{
+  display: inline-block;
+  width: 30px;
+  margin: 7px;
 }
+.redes li:hover{
+  transform: scale(1.5);
+}
+
 #carousel1{
     float: center;
     width: 100%;
@@ -203,10 +200,7 @@ header label:hover{
       float: center;
       width: 20%;
     }
-    .redes{
-      background-color: rgb(0,0,0,0.3);
-      text-decoration: none;
-    }
+
 
     footer{
       background-color: black;
