--- a/estilos.css
+++ b/estilos.css
@@ -151,6 +151,17 @@ header label:hover{
 .mapa{
   display: none;
 }
+.creado{
+  font-size: 15px;
+  font-weight: bold;
+  font-family: sans-serif;
+  color:rgb(0, 255, 136);
+  text-align: center;
+}
+.creado a{
+  text-decoration: none;
+  color: rgb(0, 255, 136);
+}
 @media screen and (max-width:768px){
   body{
     background-color: rgb(0,0,0,0.4);
