--- a/estilos.css
+++ b/estilos.css
@@ -34,18 +34,20 @@ header label:hover{
     font-family: fantasy;
     list-style: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    width: 100%;
 }
 
 .menu li{
-    border-right: 1px solid wheat;
+    border: 2px solid rgba(0, 0, 0, 0.205);
+    border-radius: 10px;
 }
 
 .menu li a{
     display: block;
     padding: 10px;
     text-decoration: none;
-    color: seagreen;
+    color:black;
 }
 
 .logo{
@@ -128,7 +130,7 @@ header label:hover{
     font-size: 20px;
 }
 .redes ul{
-  background-color: rgb(0,0,0,0.6);
+  background-color: rgb(0, 0, 0);
   text-align: center;
   padding: 20px;
   margin: 10px;
@@ -173,18 +175,24 @@ header label:hover{
     }
     .menu{
         position: absolute;
-        margin: -200%;
-        background-color:rgb(0, 0, 0,0.9);
-        padding: 0;
+        margin-left: -200%;
+        background-color:rgba(0, 0, 0, 0.877);
+        padding: 10px;
+        color: coral;
     }
     .menu ul{
         flex-direction: column;
+        text-align: center;
     }
     .menu li{
         margin: 20px;
     }
+    .menu li a{
+      color: coral;
+      border: 1px solid coral;
+    }
     #btn-menu:checked ~ .menu {
-        margin: 30px;
+        margin-left:0;
     }
     .grid-container{
       grid-template-columns:repeat(2, 1fr);
@@ -198,7 +206,7 @@ header label:hover{
     }
     .textoinicio {
       margin: 20px;
-      padding: 30px
+      padding: 30px;
       text-align: center;
       font-family: monospace;
       font-weight: bold;
